--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jimp",
-  "version": "0.2.28",
+  "name": "jimp-jg",
+  "version": "0.2.29",
   "description": "An image processing library written entirely in JavaScript (i.e. zero external or native dependencies).",
   "main": "jimp.js",
   "types": "./jimp.d.ts",
@@ -45,7 +45,7 @@
     "es6-promise": "^3.0.2",
     "exif-parser": "^0.1.9",
     "file-type": "^3.1.0",
-    "jpeg-js": "^0.2.0",
+    "jpeg-js-jg": "^0.3.4",
     "load-bmfont": "^1.2.3",
     "mime": "^1.3.4",
     "mkdirp": "0.5.1",
